feat: Add dkim_manage_keys flag to optionally disable key generation
- Added dkim_manage_keys variable (defaults to true) to control key generation
- Removed dkim_default_selector in favor of requiring explicit selector
- Simplified key generation logic by removing stat checks (creates parameter handles this)
- Updated templates to require selector (no default fallback)
- Allows role to be used for system-level OpenDKIM setup only

This change enables separation of concerns:
- System-level OpenDKIM installation/configuration (this role)
- Per-vhost key generation (handled by separate role during provisioning)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,10 +3,15 @@
 
 dkim_port: "{{ dkim_default_port }}"
 
-# default selector to be used, when no selector defined
-dkim_default_selector: 'default'
+# Set to false to disable automatic key generation (useful when keys are managed by another role)
+dkim_manage_keys: true
 
+# dkim_domains should be a list of dictionaries with 'domain' and 'selector' keys
+# Example:
+# dkim_domains:
+#   - domain: example.com
+#     selector: default
+#   - domain: another.com
+#     selector: mail
 dkim_domains: []
-# - { 'domain': 'domain.com' } # no selector defined, dkim_default_selector will be used
-# - { 'domain': 'anotherdomain.org', 'selector': '202208' }
-
+ 
